--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,71 @@
-figure {
-  display: grid;
-  place-items: center;
+body {
+  font-family: sans-serif;
+  line-height: 1.5;
+  max-width: 35em;
+  margin: 0 auto;
+  padding: 1em;
+}
+
+* {
+  margin: 0;
+}
+
+:is(main, .table-of-contents) > * + * {
+  margin-top: 1em;
+}
+
+:is(main, .table-of-contents) > :is(h1, h2, h3, h4, h5, h6) {
+  margin-top: 2em;
+}
+
+:is(h1, h2, h3, h4, h5, h6) {
+  line-height: 1.25;
+}
+
+code {
+  color: hsl(17, 98%, 35%);
+}
+
+pre code {
+  background-color: hsl(17, 98%, 10%);
+  color: hsl(17, 98%, 95%);
+  display: block;
+  overflow-x: auto;
+  max-width: 100%;
+  padding: 1em;
+  margin-inline: -1em;
 }
 
 .hero svg,
-figure svg {
+figure svg,
+.demo-example svg {
   max-width: 100%;
   max-height: 50dvh;
+  width: 100%;
 }
 
 .hero {
   display: grid;
   place-items: center;
   text-align: center;
+}
+
+.demo {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1em;
+  margin-inline: -1em;
+  border: 2px solid hsl(17, 98%, 10%);
+  gap: 1em;
+}
+
+.demo-example {
+  width: 100%;
+  position: relative;
+}
+
+.replay {
+  position: absolute;
+  bottom: 1em;
+  right: 1em;
 }
